# virtual-influencer-bot

./: .env.example  README.md  main.py  pyproject.toml
.github/workflows/: post-content.yml
data/: content_format.json  content_type.json  personality_type.json
models/: llm.py  tweet.py
utils/: api_client.py  api_config.py  db_handler.py  generate_prompt.py  load_json.py  post.py
